--- a/formulario-contacto.html
+++ b/formulario-contacto.html
@@ -3,6 +3,28 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <script>
+              var inputs = document.getElementsByClassName('formulario__input');
+                    for (var i = 0; i < inputs.length; i++) {
+                inputs[i].addEventListener('keyup', function(){
+                    if(this.value.length>=1) {
+                this.nextElementSibling.classList.add('fijar');
+                    } else {
+         this.nextElementSibling.classList.remove('fijar'); 
+      }
+  });
+}
+var inputs = document.getElementsByClassName('textarea');
+for (var i = 0; i < inputs.length; i++) {
+  inputs[i].addEventListener('keyup', function(){
+      if(this.value.length>=1) {
+          this.nextElementSibling.classList.add('fijarredact');
+      } else {
+         this.nextElementSibling.classList.remove('fijarredact'); 
+      }
+  });
+}
+        </script>
         <style>
                     * {
     box-sizing: border-box;
@@ -121,27 +143,5 @@ textarea {
             <input type="submit" class="formulario__submit">
         </form
         
-        <scripts>
-              var inputs = document.getElementsByClassName('formulario__input');
-for (var i = 0; i < inputs.length; i++) {
-  inputs[i].addEventListener('keyup', function(){
-      if(this.value.length>=1) {
-          this.nextElementSibling.classList.add('fijar');
-      } else {
-         this.nextElementSibling.classList.remove('fijar'); 
-      }
-  });
-}
-var inputs = document.getElementsByClassName('textarea');
-for (var i = 0; i < inputs.length; i++) {
-  inputs[i].addEventListener('keyup', function(){
-      if(this.value.length>=1) {
-          this.nextElementSibling.classList.add('fijarredact');
-      } else {
-         this.nextElementSibling.classList.remove('fijarredact'); 
-      }
-  });
-}
-        </script>
     </body>
 </html>
